--- a/style/iconfont.css
+++ b/style/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id  */
-  src: url('iconfont.ttf?t=1740970744488') format('truetype');
+  src: url('iconfont.ttf?t=1741324433360') format('truetype');
 }
 
 .iconfont {
@@ -9,10 +9,6 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-mbefengge_hanbao:before {
-  content: "\e616";
 }
 
 .icon-time-task:before {
@@ -29,5 +25,9 @@
 
 .icon-reduce:before {
   content: "\e840";
+}
+
+.icon-delete:before {
+  content: "\e83a";
 }
 
